# ImageServer

./: .gitignore  Dockerfile  README.md  bak.py  create_db.py  main.py  pyproject.toml  requirements.txt
src/: crud.py  database.py  model.py  router.py  service.py  settings.py  utils.py
src/crud/: __init__.py  document.py  image.py
src/model/: __init__.py  base.py  document.py  image.py
src/router/: __init__.py  document.py  image.py
src/service/: __init__.py  document.py  image.py
