[project]
name = "pic-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "diskcache>=5.6.3",
    "fastapi[standard]>=0.138.1",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-multipart>=0.0.32",
    "python-slugify>=8.0.4",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
